edited border radius and font sizes in header

--- a/public/index.html
+++ b/public/index.html
@@ -27,24 +27,24 @@
 
 
    <!--====== HEADER ======-->
-    <header id="header "class="header fixed flex items-center justify-between w-full top-0 left-0 py-8 bg-transparent">
+    <header id="header "class="header fixed flex items-center justify-between w-full top-0 left-0 py-10 bg-transparent">
         <nav class="nav container relative flex items-center justify-between">
             <!-- Action links -->
             <div class="nav__action__links">
-                <a hre2f="mailto:danieladeofficial@gmail.com" class="email font-medium text-sm p-3 rounded-md mr-2 border-[0.15rem] border-solid">
+                <a hre2f="mailto:danieladeofficial@gmail.com" class="email font-medium text-sm pt-2 pb-2 p-3 rounded-full mr-2">
                     Email
                 </a>
-                <a 2href="#" class="cv font-medium text-sm p-3 rounded-md border-[0.15rem] border-solid">
+                <a 2href="#" class="cv font-medium text-sm pt-2 pb-2 p-3 rounded-full border-[0.15rem] border-solid">
                     CV
                 </a>
             </div>
             <!-- Social links-->
             <div class="nav__social__links flex">
                 <!-- mobile -->
-                <div class="mobile hidden items-center text-2xl">
-                    <a href="" class="flex items-center justify-center w-9 mr-4 rounded-full border-[0.125rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
-                    <a href="" class="flex items-center justify-center w-9 mr-4 rounded-full border-[0.125rem] border-solid"><i class="ri-github-line"></i></a>
-                    <a href="" class="flex items-center justify-center w-9 rounded-full border-[0.15rem] border-solid"><i class="ri-instagram-line"></i></a>
+                <div class="mobile hidden items-center text-lg">
+                    <a href="" class="flex items-center justify-center w-9 h-9 mr-4 rounded-full border-[0.125rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
+                    <a href="" class="flex items-center justify-center w-9 h-9 mr-4 rounded-full border-[0.125rem] border-solid"><i class="ri-github-line"></i></a>
+                    <a href="" class="flex items-center justify-center w-9 h-9 rounded-full border-[0.15rem] border-solid"><i class="ri-instagram-line"></i></a>
                 </div>
                 <!-- desktop -->
                 <div class="desktop text-sm">
@@ -63,11 +63,11 @@
 
         <!--====== HOME ======-->
         <section class="home section container flex items-center justify-center flex-col w-96 mt-24" id="home">    
-            <div class="profile relative flex">
+            <div class="profile relative">
                 <!-- home profile image -->
                 <img class="image w-40 h-40 rounded-full object-cover border-[0.175rem] border-solid" src="assets/images/me/me-w.jpg" alt="Profile">
-                <span class="name absolute flex items-center justify-center text-sm font-medium rounded-full w-40 p-3">
-                    Daniel Adediran👋🏼 
+                <span class="name absolute flex items-center justify-center text-xs rounded-full w-40 p-3">
+                    Daniel Adediran &nbsp;👋🏼 
                 </span>
             </div>
             <div class="content flex items-center justify-center">
