--- a/public/index.html
+++ b/public/index.html
@@ -31,20 +31,20 @@
         <nav class="nav container relative flex items-center justify-between">
             <!-- Action links -->
             <div class="nav__action__links">
-                <a hre2f="mailto:danieladeofficial@gmail.com" class="email font-medium text-sm pt-2 pb-2 p-3 rounded-full mr-2">
+                <a hre2f="mailto:danieladeofficial@gmail.com" class="email font-medium text-xs pt-3 pb-3 p-4 rounded-full mr-2">
                     Email
                 </a>
-                <a 2href="#" class="cv font-medium text-sm pt-2 pb-2 p-3 rounded-full border-[0.15rem] border-solid">
+                <a 2href="#" class="cv font-medium text-xs pt-3 pb-3 p-4 rounded-full border-[0.2rem] border-solid">
                     CV
                 </a>
             </div>
             <!-- Social links-->
             <div class="nav__social__links flex">
                 <!-- mobile -->
-                <div class="mobile hidden items-center text-lg">
-                    <a href="" class="flex items-center justify-center w-9 h-9 mr-4 rounded-full border-[0.125rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
-                    <a href="" class="flex items-center justify-center w-9 h-9 mr-4 rounded-full border-[0.125rem] border-solid"><i class="ri-github-line"></i></a>
-                    <a href="" class="flex items-center justify-center w-9 h-9 rounded-full border-[0.15rem] border-solid"><i class="ri-instagram-line"></i></a>
+                <div class="mobile hidden items-center text-xl">
+                    <a href="" class="flex items-center justify-center w-10 h-10 mr-3 rounded-full border-[0.2rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
+                    <a href="" class="flex items-center justify-center w-10 h-10 mr-3 rounded-full border-[0.2rem] border-solid"><i class="ri-github-line"></i></a>
+                    <a href="" class="flex items-center justify-center w-10 h-10 rounded-full border-[0.2rem] border-solid"><i class="ri-instagram-line"></i></a>
                 </div>
                 <!-- desktop -->
                 <div class="desktop text-sm">
