editing header icons

--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,10 @@
         <nav class="nav container relative flex items-center justify-between">
             <!-- Action links -->
             <div class="nav__action__links">
-                <a hre2f="mailto:danieladeofficial@gmail.com" class="email font-bold text-xs pt-3 pb-3 p-5 rounded-full mr-2">
+                <a hre2f="mailto:danieladeofficial@gmail.com" class="email font-bold pt-3 pb-3 p-5 rounded-full mr-2">
                     Email
                 </a>
-                <a 2href="#" class="cv font-bold text-xs pt-3 pb-3 p-5 rounded-full border-[0.2rem] border-solid">
+                <a 2href="#" class="cv font-bold pt-3 pb-3 p-5 rounded-full border-[0.2rem] border-solid">
                     CV
                 </a>
             </div>
@@ -42,9 +42,9 @@
             <div class="nav__social__links flex">
                 <!-- mobile -->
                 <div class="mobile hidden items-center text-xl">
-                    <a href="" class="flex items-center justify-center w-12 h-12 mr-2 rounded-full border-[0.2rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
-                    <a href="" class="flex items-center justify-center w-12 h-12 mr-2 rounded-full border-[0.2rem] border-solid"><i class="ri-github-line"></i></a>
-                    <a href="" class="flex items-center justify-center w-12 h-12 rounded-full border-[0.2rem] border-solid"><i class="ri-instagram-line"></i></a>
+                    <a href="" class="flex items-center justify-center w-12 h-12 mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
+                    <a href="" class="flex items-center justify-center w-12 h-12 mr-2 rounded-full border-[0.25rem] border-solid"><i class="ri-github-line"></i></a>
+                    <a href="" class="flex items-center justify-center w-12 h-12 rounded-full border-[0.25rem] border-solid"><i class="ri-instagram-line"></i></a>
                 </div>
                 <!-- desktop -->
                 <div class="desktop text-sm">
@@ -65,7 +65,7 @@
         <section class="home section container flex items-center justify-center flex-col w-96 mt-24" id="home">    
             <div class="profile relative">
                 <!-- home profile image -->
-                <img class="image w-40 h-40 rounded-full object-cover border-[0.2rem] border-solid" src="assets/images/me/me-w.jpg" alt="Profile">
+                <img class="image w-40 h-40 rounded-full object-cover border-[0.25rem] border-solid" src="assets/images/me/me-w.jpg" alt="Profile">
                 <span class="name absolute flex items-center justify-center text-xs rounded-full w-28 pt-4 pb-4 p-3">
                     Daniel Ade &nbsp;👋🏼 
                 </span>
