--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
         <section class="home section container flex items-center justify-center flex-col w-96 mt-24" id="home">    
             <div class="profile relative">
                 <!-- home profile image -->
-                <img class="image w-40 h-40 rounded-full object-cover border-[0.25rem] border-solid" src="assets/images/me/me-w.jpg" alt="Profile">
+                <img class="image w-40 h-40 rounded-full object-cover border-[0.25rem] border-solid" src="assets/images/me/me-b&w.jpg" alt="Profile">
                 <span class="name absolute flex items-center justify-center text-xs rounded-full w-28 pt-4 pb-4 p-3">
                     Daniel Ade &nbsp;👋🏼 
                 </span>
