--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,10 @@
         <nav class="nav container relative flex items-center justify-between">
             <!-- Action links -->
             <div class="nav__action__links">
-                <a hre2f="mailto:danieladeofficial@gmail.com" class="email font-bold pt-4 pb-4 p-5 rounded-full mr-2">
+                <a hre2f="mailto:danieladeofficial@gmail.com" class="email font-bold pt-4 pb-4 p-6 rounded-full mr-2">
                     Email
                 </a>
-                <a 2href="#" class="cv font-bold pt-4 pb-4 p-5 rounded-full border-[0.2rem] border-solid">
+                <a 2href="#" class="cv font-bold pt-4 pb-4 p-6 rounded-full border-[0.2rem] border-solid">
                     CV
                 </a>
             </div>
@@ -65,14 +65,16 @@
         <section class="home section container flex items-center justify-center flex-col w-96 mt-24" id="home">    
             <div class="profile relative">
                 <!-- home profile image -->
-                <img class="image w-40 h-40 rounded-full object-cover border-[0.25rem] border-solid" src="assets/images/me/me-b&w.jpg" alt="Profile">
-                <span class="name absolute flex items-center justify-center text-xs rounded-full w-28 pt-4 pb-4 p-3">
+                <img class="image relative z-20 w-40 h-40 rounded-full object-cover border-[0.25rem] border-solid" src="assets/images/me/me-b&w.jpg" alt="Profile">
+                <span class="name absolute z-30 flex items-center justify-center text-xs rounded-full w-28 pt-4 pb-4 p-3">
                     Daniel Ade &nbsp;👋🏼 
                 </span>
+                <!-- curved arrow -->
+                <img src="assets/svg/curved-arrow.svg" alt="Curved-arrow" class="arrow z-10 absolute w-20 h-20">
             </div>
-            <div class="content flex items-center justify-center">
-                <h1 class="text hidden mt-6 text-2xl">
-                    Building digital products, brands and experiences.
+            <div class="content flex items-center justify-center pt-2">
+                <h1 class="text mt-16 text-2xl stroke-text-2 text-center">
+                    Building digital products and experiences.
                 </h1>                
             </div>
             
