added name bounce animation

--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,10 @@
         <nav class="nav container relative flex items-center justify-between">
             <!-- Action links -->
             <div class="nav__action__links">
-                <a hre2f="mailto:danieladeofficial@gmail.com" class="email font-bold pt-4 pb-4 p-6 rounded-full mr-2">
+                <a hre2f="mailto:danieladeofficial@gmail.com" class="email font-bold pt-3 pb-3 p-6 rounded-full mr-2">
                     Email
                 </a>
-                <a 2href="#" class="cv font-bold pt-4 pb-4 p-6 rounded-full border-[0.2rem] border-solid">
+                <a 2href="#" class="cv font-bold pt-3 pb-3 p-6 rounded-full border-[0.2rem] border-solid">
                     CV
                 </a>
             </div>
@@ -66,7 +66,7 @@
             <div class="profile relative">
                 <!-- home profile image -->
                 <img class="image relative z-20 w-40 h-40 rounded-full object-cover border-[0.25rem] border-solid" src="assets/images/me/me-b&w.jpg" alt="Profile">
-                <span class="name absolute z-30 flex items-center justify-center text-xs rounded-full w-28 pt-4 pb-4 p-3">
+                <span class="name absolute z-30 flex items-center justify-center text-xs font-medium rounded-full w-28 pt-4 pb-4 p-3">
                     Daniel Ade &nbsp;👋🏼 
                 </span>
                 <!-- curved arrow -->
