added github button on home page

--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,10 @@
         <nav class="nav container relative flex items-center justify-between">
             <!-- Action links -->
             <div class="nav__action__links">
-                <a hre2f="mailto:danieladeofficial@gmail.com" class="email font-bold pt-3 pb-3 p-6 rounded-full mr-2">
+                <a href="mailto:danieladeofficial@gmail.com" class="email font-bold pt-4 pb-4 p-6 rounded-full mr-2">
                     Email
                 </a>
-                <a 2href="#" class="cv font-bold pt-3 pb-3 p-6 rounded-full border-[0.2rem] border-solid">
+                <a href="#" class="cv font-bold pt-4 pb-4 p-6 rounded-full border-[0.2rem] border-solid">
                     CV
                 </a>
             </div>
@@ -42,17 +42,17 @@
             <div class="nav__social__links flex">
                 <!-- mobile -->
                 <div class="mobile hidden items-center text-xl">
-                    <a href="" class="flex items-center justify-center w-12 h-12 mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
-                    <a href="" class="flex items-center justify-center w-12 h-12 mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-github-line"></i></a>
-                    <a href="" class="flex items-center justify-center w-12 h-12 rounded-full border-[0.25rem] border-solid"><i class="ri-instagram-line"></i></a>
+                    <a href="#" class="flex items-center justify-center w-14 h-14 mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
+                    <a href="#" class="flex items-center justify-center w-14 h-14 mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-dribbble-line"></i></a>
+                    <a href="https://www.instagram.com/heisdanielade/" class="flex items-center justify-center w-14 h-14 rounded-full border-[0.25rem] border-solid"><i class="ri-instagram-line"></i></a>
                 </div>
                 <!-- desktop -->
                 <div class="desktop text-sm">
-                    <a href="">LinkedIn</a>
+                    <a href="#">LinkedIn</a>
                     <span class="slash font-bold ml-1 mr-1">/</span>
-                    <a href="">GitHub</a>
+                    <a href="#">Dribbble</a>
                     <span class="slash font-bold ml-1 mr-1">/</span>
-                    <a href="">Instagram</a>
+                    <a href="https://www.instagram.com/heisdanielade/">Instagram</a>
                 </div>
             </div>
         </nav>
@@ -72,10 +72,15 @@
                 <!-- curved arrow -->
                 <img src="assets/svg/curved-arrow.svg" alt="Curved-arrow" class="arrow z-10 absolute w-20 h-20">
             </div>
-            <div class="content flex items-center justify-center pt-2">
+            <div class="content flex items-center justify-center flex-col pt-2">
                 <h1 class="text mt-16 text-2xl stroke-text-2 text-center">
                     Building digital products and experiences.
-                </h1>                
+                </h1>
+                <a href="https://github.com/heisdanielade" class="github__link mt-8 font-medium text-xs pt-4 pb-4 p-10 rounded-full">
+                    <span>GitHub</span>
+                    <i class="ri-arrow-right-up-line underline text-sm pl-1"></i>
+                    <!-- <i class="ri-github-fill text-sm"></i> -->
+                </a>                
             </div>
             
         </section>
