edited github btn on home section

--- a/public/index.html
+++ b/public/index.html
@@ -76,10 +76,9 @@
                 <h1 class="text mt-16 text-2xl stroke-text-2 text-center">
                     Building digital products and experiences.
                 </h1>
-                <a href="https://github.com/heisdanielade" class="github__link mt-8 font-medium text-xs pt-4 pb-4 p-10 rounded-full">
-                    <span>GitHub</span>
-                    <i class="ri-arrow-right-up-line underline text-sm pl-1"></i>
-                    <!-- <i class="ri-github-fill text-sm"></i> -->
+                <a href="https://github.com/heisdanielade" class="github__link mt-8 pt-5 pb-5 p-14 rounded-full">
+                    <span class="font-bold text-xs">GitHub</span>
+                    <i class="ri-arrow-right-up-line underline font-light text-sm pl-1"></i>
                 </a>                
             </div>
             
