fixed navbar positioning on ipad pro sizes

--- a/public/index.html
+++ b/public/index.html
@@ -31,20 +31,20 @@
         <nav class="nav container relative flex items-center justify-between">
             <!-- Action links -->
             <div class="nav__action__links">
-                <a href="mailto:danieladeofficial@gmail.com" class="email font-bold pt-4 pb-4 p-6 rounded-full mr-2">
+                <a href="mailto:danieladeofficial@gmail.com" class="email font-bold pt-3 pb-3 p-6 rounded-full mr-2">
                     Email
                 </a>
-                <a href="#" class="cv font-bold pt-4 pb-4 p-6 rounded-full border-[0.2rem] border-solid">
+                <a href="#" class="cv font-bold pt-3 pb-3 p-6 rounded-full border-[0.2rem] border-solid">
                     CV
                 </a>
             </div>
             <!-- Social links-->
             <div class="nav__social__links flex">
                 <!-- mobile -->
-                <div class="mobile hidden items-center text-xl">
-                    <a href="#" class="flex items-center justify-center w-14 h-14 mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
-                    <a href="#" class="flex items-center justify-center w-14 h-14 mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-dribbble-line"></i></a>
-                    <a href="https://www.instagram.com/heisdanielade/" class="flex items-center justify-center w-14 h-14 rounded-full border-[0.25rem] border-solid"><i class="ri-instagram-line"></i></a>
+                <div class="mobile hidden items-center text-lg">
+                    <a href="#" class="flex items-center justify-center w-12 h-12 mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-linkedin-box-fill"></i></a>
+                    <a href="#" class="flex items-center justify-center w-12 h-12 mr-1 rounded-full border-[0.25rem] border-solid"><i class="ri-dribbble-line"></i></a>
+                    <a href="https://www.instagram.com/heisdanielade/" class="flex items-center justify-center w-12 h-12 rounded-full border-[0.25rem] border-solid"><i class="ri-instagram-line"></i></a>
                 </div>
                 <!-- desktop -->
                 <div class="desktop text-sm">
@@ -73,8 +73,8 @@
                 <img src="assets/svg/curved-arrow.svg" alt="Curved-arrow" class="arrow z-10 absolute w-20 h-20">
             </div>
             <div class="content flex items-center justify-center flex-col pt-2">
-                <h1 class="text mt-16 text-2xl stroke-text-2 text-center">
-                    Building digital products and experiences.
+                <h1 class="info gradient-text mt-16 text-3xl text-center">
+                    Building digital products, brands  and experiences.
                 </h1>
                 <a href="https://github.com/heisdanielade" class="github__link mt-8 pt-5 pb-5 p-14 rounded-full">
                     <span class="font-bold text-xs">GitHub</span>
