--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,9 @@
                     Email
                 </a>
                 <button id="language" class="language flex items-center justify-center  w-12 h-11 font-bold">
-                   <span class="lang-icon english hidden">🇬🇧</span>
+                   <span class="lang-icon english hiddens">🇬🇧</span>
                    <span class="lang-icon polish hidden">🇵🇱</span>
-                   <span class="lang-icon german hiddens">🇩🇪</span>
+                   <span class="lang-icon german hidden">🇩🇪</span>
                 </button>
             </div>
             <!-- Social links-->
@@ -75,10 +75,10 @@
                 <img src="assets/svg/curved-arrow.svg" alt="Curved-arrow" class="arrow z-10 absolute w-20 h-20">
             </div>
             <div class="content flex items-center justify-center flex-col pt-2">
-                <h1 class="info text-center text-6xl gradient-text mt-16">
+                <h1 class="info text-center text-6xl gradient-text mt-20">
                     <!-- inline-block whitespace-pre-wrap break-words -->
 
-                    Building digital products, brands and experiences.
+                    Building digital<br> products, brands and experiences.
                 </h1>
                 <a href="https://github.com/heisdanielade" class="github__link flex items-center justify-center mt-12 mb-11 w-44 h-14 rounded-full">
                     <span class="font-medium text-xs">GitHub</span>
