working on language icons

--- a/public/index.html
+++ b/public/index.html
@@ -34,11 +34,12 @@
                 <a href="mailto:danieladeofficial@gmail.com" class="email flex items-center justify-center w-20 h-10 rounded-full mr-2">
                     Email
                 </a>
-                <button id="language" class="language flex items-center justify-center  w-12 h-11 font-bold">
-                   <span class="lang-icon english hiddens">🇬🇧</span>
-                   <span class="lang-icon polish hidden">🇵🇱</span>
-                   <span class="lang-icon german hidden">🇩🇪</span>
+                <button id="language" class="language flex items-center justify-center w-12 h-11 font-extrabold">
+                   <span class="lang-icon english hiddens">GB</span>
+                   <span class="lang-icon polish hidden">PL</span>
+                   <span class="lang-icon german hidden">DE</span>
                 </button>
+                <!-- 🇬🇧 🇵🇱 🇩🇪 -->
             </div>
             <!-- Social links-->
             <div class="nav__social__links flex">
