working on lang icons 2

--- a/public/index.html
+++ b/public/index.html
@@ -35,11 +35,10 @@
                     Email
                 </a>
                 <button id="language" class="language flex items-center justify-center w-12 h-11 font-extrabold">
-                   <span class="lang-icon english hiddens">GB</span>
-                   <span class="lang-icon polish hidden">PL</span>
-                   <span class="lang-icon german hidden">DE</span>
+                   <span class="lang-icon english hidden">🇬🇧</span>
+                   <span class="lang-icon polish">🇵🇱</span>
                 </button>
-                <!-- 🇬🇧 🇵🇱 🇩🇪 -->
+                <!--  🇩🇪 -->
             </div>
             <!-- Social links-->
             <div class="nav__social__links flex">
