done with home and services section border radius and also fixed mobile navbar icons border

--- a/public/index.html
+++ b/public/index.html
@@ -89,9 +89,7 @@
 
 
         <!--====== CAROUSEL ======-->
-        <div id="empty" class="empty absolute"></div>
-
-        <section id="carousel" class="carousel section container relative flex items-center justify center p-5">
+        <section id="carousel" class="carousel container relative flex items-center justify-center p-5 mt-5 mb-5">
             <!-- logos -->
             <img src="assets/images/logos/python-cd.png" alt="Logo" class="logo object-cover mr-10">
             <img src="assets/images/logos/react-cd.png" alt="Logo" class="logo object-cover mr-10">
