fixed container paddings

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
     <main class="main">
 
         <!--====== HOME ======-->
-        <section id="home" class="home section container relative flex items-center justify-center flex-col w-full">    
+        <section id="home" class="home section container container-padding-1 relative flex items-center justify-center flex-col w-full">    
             <div class="profile relative">
                 <!-- home profile image -->
                 <img class="image relative z-20 w-40 h-40 rounded-full object-cover border-[0.25rem] border-solid" src="assets/images/me/me-b&w.jpg" alt="Profile">
@@ -89,7 +89,7 @@
 
 
         <!--====== CAROUSEL ======-->
-        <section id="carousel" class="carousel container relative flex items-center justify-center p-5 mt-5 mb-5">
+        <section id="carousel" class="carousel container container-padding-2 relative flex items-center justify-center">
             <!-- logos -->
             <img src="assets/images/logos/python-cd.png" alt="Logo" class="logo object-cover mr-10">
             <img src="assets/images/logos/react-cd.png" alt="Logo" class="logo object-cover mr-10">
@@ -98,7 +98,7 @@
             <img src="assets/images/logos/vscode-cd.png" alt="Logo" class="logo object-cover mr-10">
         </section>
 
-        <section id="services" class="services section container">
+        <section id="services" class="services section container container-padding-1">
 
         </section>
 
