changed carousel section background to transparent

--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
 
 
         <!--====== CAROUSEL ======-->
-        <section id="carousel" class="carousel container container-padding-2 relative flex items-center justify-center">
+        <section id="carousel" class="carousel container container-padding-2 relative flex items-center justify-center bg-transparent">
             <!-- logos -->
             <img src="assets/images/logos/python-cd.png" alt="Logo" class="logo object-cover mr-10">
             <img src="assets/images/logos/react-cd.png" alt="Logo" class="logo object-cover mr-10">
