fixed navbar container padding

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
    <!--====== HEADER ======-->
     <header id="header "class="header flex items-center justify-between w-full top-0 left-0 py-10 bg-transparent">
-        <nav class="nav container relative flex items-center justify-between">
+        <nav class="nav container container-padding-1 relative flex items-center justify-between">
             <!-- Action links -->
             <div class="nav__action__links flex items-center text-sm font-medium tracking-tight">
                 <a href="mailto:danieladeofficial@gmail.com" class="email flex items-center justify-center w-20 h-10 rounded-full mr-2">
