experimenting with backgrounds

--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,36 @@
         </section>
 
         <section id="services" class="services section container container-padding-1">
+            <h1 class="info text-center text-2xl gradient-text">
+                Collaborate with brands<br> to create impactful results.
+            </h1>
 
+            <span class="title">
+                Services
+            </span>
+
+            <div class="serv-con">
+                <div class="box">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="width: 100%; height: 100%" viewBox="0 0 44 44" preserveAspectRatio="none" width="100%" height="100%"><use href="#svg1367543754_2103"></use></svg>
+                    <h2 class="text"></h2>
+                    <p class="info"></p>
+                </div>
+                <div class="box">
+                    <img src="" alt="" class="icon">
+                    <h2 class="text"></h2>
+                    <p class="info"></p>
+                </div>
+                <div class="box">
+                    <img src="" alt="" class="icon">
+                    <h2 class="text"></h2>
+                    <p class="info"></p>
+                </div>
+                <div class="box">
+                    <img src="" alt="" class="icon">
+                    <h2 class="text"></h2>
+                    <p class="info"></p>
+                </div>
+            </div>
         </section>
 
     
