done with services section text & title

--- a/public/index.html
+++ b/public/index.html
@@ -98,12 +98,12 @@
             <img src="assets/images/logos/vscode-cd.png" alt="Logo" class="logo object-cover mr-10">
         </section>
 
-        <section id="services" class="services section container container-padding-1">
+        <section id="services" class="services section container container-padding-1 flex items-center justify-center flex-col">
             <h1 class="info text-center text-2xl gradient-text">
                 Collaborate with brands<br> to create impactful results.
             </h1>
 
-            <span class="title">
+            <span class="title text-xs font-bold rounded-full mt-12 p-2 flex items-center justify-center">
                 Services
             </span>
 
