done with services section for mobile view

--- a/public/index.html
+++ b/public/index.html
@@ -98,38 +98,58 @@
             <img src="assets/images/logos/vscode-cd.png" alt="Logo" class="logo object-cover mr-10">
         </section>
 
+        
+        <!--====== SERVICES ======-->
         <section id="services" class="services section container container-padding-1 flex items-center justify-center flex-col">
-            <h1 class="info text-center text-2xl gradient-text">
-                Collaborate with brands<br> to create impactful results.
+            <h1 class="title-info text-center text-4xl gradient-text">
+                Collaborate with brands<br> to create impactful<br> results.
             </h1>
 
-            <span class="title text-xs font-bold rounded-full mt-12 p-2 flex items-center justify-center">
+            <span class="title text-sm font-bold rounded-full mt-14 p-2 flex items-center justify-center">
                 Services
             </span>
 
-            <div class="serv-con">
-                <div class="box">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="width: 100%; height: 100%" viewBox="0 0 44 44" preserveAspectRatio="none" width="100%" height="100%"><use href="#svg1367543754_2103"></use></svg>
-                    <h2 class="text"></h2>
-                    <p class="info"></p>
+            <div class="serv-con mt-8 mb-4 flex">
+                <div class="con-1 flex items-center justify-center">
+                    <div class="box m-1">
+                        <img src="assets/images/descriptions/data.png" alt="Data" class="descriptive-icon w-10 h-10 mb-5">
+                        <h2 class="text text-lg font-medium mb-4">Data Analysis</h2>
+                        <p class="info text-sm">
+                            Designing interfaces that are intuitive, efficient, and enjoyable to use.
+                        </p>
+                    </div>
+                    <div class="box m-1">
+                        <img src="assets/images/descriptions/coding.png" alt="Coding" class="descriptive-icon w-10 h-10 mb-5">
+                        <h2 class="text text-lg font-medium mb-4">Web Development</h2>
+                        <p class="info text-sm">
+                            Transforming ideas into exceptional web and mobile app experiences.
+                        </p>
+                    </div>
                 </div>
-                <div class="box">
-                    <img src="" alt="" class="icon">
-                    <h2 class="text"></h2>
-                    <p class="info"></p>
-                </div>
-                <div class="box">
-                    <img src="" alt="" class="icon">
-                    <h2 class="text"></h2>
-                    <p class="info"></p>
-                </div>
-                <div class="box">
-                    <img src="" alt="" class="icon">
-                    <h2 class="text"></h2>
-                    <p class="info"></p>
+                <div class="con-2 flex items-center justify-center">
+                    <div class="box m-1">
+                        <img src="assets/images/descriptions/web-design.png" alt="Design" class="descriptive-icon w-10 h-10 mb-5">
+                        <h2 class="text text-lg font-medium mb-4">UI & UX</h2>
+                        <p class="info text-sm">
+                            Crafting visually stunning designs that connect with your audience.
+                        </p>
+                    </div>
+                    <div class="box m-1">
+                        <img src="assets/images/descriptions/quality.png" alt="Quality" class="descriptive-icon w-10 h-10 mb-5">
+                        <h2 class="text text-lg font-medium mb-4">Quality Assurance</h2>
+                        <p class="info text-sm">
+                            Bringing your vision to life with the latest technology and design trends.
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
+
+
+         <!--====== CONTACT ======-->
+         <section id="contact" class="contact section container container-padding-1">
+
+         </section>
 
     
     </div>
