added margin to con-1 in services section

--- a/public/index.html
+++ b/public/index.html
@@ -109,8 +109,8 @@
                 Services
             </span>
 
-            <div class="serv-con mt-8 mb-4 flex">
-                <div class="con-1 flex items-center justify-center">
+            <div class="serv-con mt-8 mb-5 flex">
+                <div class="con-1 flex items-center justify-center mb-8">
                     <div class="box m-1">
                         <img src="assets/images/descriptions/data.png" alt="Data" class="descriptive-icon w-10 h-10 mb-5">
                         <h2 class="text text-lg font-medium mb-4">Data Analysis</h2>
